--- a/about-us/index.html
+++ b/about-us/index.html
@@ -179,6 +179,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 <div class="wp-block-kadence-column kadence-column28_cc22c0-fb"><div class="kt-inside-inner-col">
 <h1 class="kt-adv-heading28_28b74a-88 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading28_28b74a-88">About Us</h1>
 <p class="kt-adv-heading28_ddbf56-7b wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading28_ddbf56-7b">Welcome to <a href="https://www.ricepuritytestlabs.com">Rice Purity Test</a>, where we bring fun and engaging experiences to life! Our quiz platform is designed to provide an interactive and seamless way for users to take the test.<br>We believe in keeping things simple, entertaining, and user-friendly. Whether you’re here out of curiosity or just for fun, our goal is to make your visit enjoyable.<br>We are committed to maintaining a smooth and accessible experience for all our users. Feel free to reach out if you have any feedback or suggestions—we’d love to hear from you!<br>Thank you for visiting, and enjoy your time on our site!</p>
+<p>This content may be updated periodically. Last updated: Saturday, January 24, 2026.</p>
 </div></div>
 </div><!-- .entry-content -->
 	</div>
