--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -179,7 +179,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 <div class="wp-block-kadence-column kadence-column26_91c6b0-72"><div class="kt-inside-inner-col">
 <h1 class="kt-adv-heading26_179c0b-ba wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading26_179c0b-ba">Contact Us</h1>
 <p class="kt-adv-heading26_402c9e-d4 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading26_402c9e-d4">Have questions, feedback or anything else? Feel free to reach out to us anytime!<br>📧 <strong>Email:</strong> <a href="mail:admin@ricepuritytestlabs.com" rel="nofollow"><span class="__cf_email__" data-cfemail="e48580898d8aa4968d87819491968d909d90819790888586ca878b89">admin@ricepuritytestlabs.com</span></a><br>We’ll do our best to respond as soon as possible. Looking forward to hearing from you!</p>
-</div></div>
+<p>This content may be updated periodically. Last updated: Saturday, January 24, 2026.</p></div></div>
 </div><!-- .entry-content -->
 	</div>
 </article><!-- #post-26 -->
