--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -179,7 +179,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 <div class="wp-block-kadence-column kadence-column30_22a0da-42"><div class="kt-inside-inner-col">
 <h1 class="kt-adv-heading30_ca823c-05 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading30_ca823c-05">Privacy Policy</h1>
 <p class="kt-adv-heading30_eca8bc-f8 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading30_eca8bc-f8">At www.ricepuritytestlabs.com, we respect your privacy. We do not collect, store, or track any personal data from our users.<br><strong>No Data Collection:</strong> We do not require login or personal details.<br><strong>No Cookies:</strong> Our website does not use cookies or tracking technologies.<br><strong>No Third-Party Links:</strong> We do not share or link to external sites that collect data.<br>If you have any concerns, feel free to contact us at 📧 <a href="mail:admin@ricepuritytestlabs.com" rel="nofollow"><span class="__cf_email__" data-cfemail="640500090d0a24160d07011411160d101d100117100805064a070b09">admin@ricepuritytestlabs.com</span></a>. By using our site, you agree to this simple and transparent policy.</p>
-<div class="wp-block-kadence-column kadence-column30_eafb6f-ff"><div class="kt-inside-inner-col">
+<p>This Privacy Policy may be updated periodically. Last updated: Saturday, January 24, 2026.</p><div class="wp-block-kadence-column kadence-column30_eafb6f-ff"><div class="kt-inside-inner-col">
 <span id="ezoic-privacy-policy-embed"></span>
 </div></div>
 </div></div>
