--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -203,7 +203,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 <p class="kt-adv-heading184_0690a0-9e wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading184_0690a0-9e">We may update or modify these Terms and Conditions at any time without prior notice. The latest version will always be available on this page. By continuing to use the website, you agree to any updated terms.</p>
 <h2 class="kt-adv-heading184_f3b807-c2 wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading184_f3b807-c2">Contact Us</h2>
 <p class="kt-adv-heading184_020b03-4d wp-block-kadence-advancedheading" data-kb-block="kb-adv-heading184_020b03-4d">If you have any questions about these Terms and Conditions, please reach out through our <strong><a href="https://www.ricepuritytestlabs.com/contact-us/">Contact us page</a></strong>.</p>
-</div></div>
+This Terms and Conditions may be updated periodically. Last updated: Saturday, January 24, 2026.</div></div>
 </div></div>
 </div><!-- .entry-content -->
 	</div>
