--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ img:is([sizes=auto i],[sizes^="auto," i]){contain-intrinsic-size:3000px 1500px}
 <div class="entry-content single-content">
 	
 <div class="wp-block-kadence-column kadence-column9_e96ff2-14"><div class="kt-inside-inner-col">
-<div class="wp-block-kadence-image kb-image9_e68e86-b7"><figure class="aligncenter size-large"><img fetchpriority="high" decoding="async" width="1024" height="145" src="images/thresherOfficial.png" alt="Rice Purity Test Image" class="kb-img wp-image-78" srcset="images/Rice-Purity-Test-7-1024x145.webp 1024w, images/Rice-Purity-Test-7-300x43.webp 300w, images/Rice-Purity-Test-7-768x109.webp 768w, images/Rice-Purity-Test-7.webp 1450w" sizes="(max-width: 1024px) 100vw, 1024px"></figure></div>
+<div class="wp-block-kadence-image kb-image9_e68e86-b7"><figure class="aligncenter size-large"><img fetchpriority="high" decoding="async" width="1024" height="145" src="/thresherOfficial.png" alt="Rice Purity Test Image" class="kb-img wp-image-78" srcset="images/Rice-Purity-Test-7-1024x145.webp 1024w, images/Rice-Purity-Test-7-300x43.webp 300w, images/Rice-Purity-Test-7-768x109.webp 768w, images/Rice-Purity-Test-7.webp 1450w" sizes="(max-width: 1024px) 100vw, 1024px"></figure></div>
 
 
 
