--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en-US" class="no-js" itemtype="https://schema.org/WebPage" itemscope="" style="background-color: #FBEEC8;background-image: url("https://www.ricepuritytestlabs.com/owl.png");"><head>
+<!DOCTYPE html><html lang="en-US" class="no-js" itemtype="https://schema.org/WebPage" itemscope="" style="background-color: #FBEEC8;background-image: url('/owl.png');"><head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
