--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
 /*# sourceURL=kadence_blocks_css-inline-css */
 </style>
 <link rel="icon" href="images/cropped-Untitled-design-5-32x32.webp" sizes="32x32">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-96XFE1R2R6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-96XFE1R2R6');
+</script>
 </head>
 
 <body class="home wp-singular page-template-default page page-id-9 wp-embed-responsive wp-theme-kadence footer-on-bottom hide-focus-outline link-style-standard no-header content-title-style-hide content-width-fullwidth content-style-unboxed content-vertical-padding-hide non-transparent-header mobile-non-transparent-header">
